# savon

./: Cargo.toml  README.md
assets/: example.wsdl  wikipedia-example.wsdl
savon-test/: Cargo.toml  build.rs  countrinfoservice.wsdl
savon-test/src/: main.rs
src/: error.rs  gen.rs  http.rs  lib.rs  wsdl.rs
src/rpser/: mod.rs  xml.rs
