[package]
name = "savon"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
description = "reserved"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Geal/savon"
readme = "README.md"
documentation = "https://docs.rs/savon"
keywords = ["soap"]

[dependencies]
xml-rs = "0.8"
log = "0.4"
xmltree = "0.10"
chrono = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
case = "^1.0"
reqwest = "0.10"
serde = "1.0"
serde-xml-rs = "0.4"

[workspace]
members = [ "savon-derive", "savon-test" ]
