[package]
name = "savon-test"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savon = { path = ".."}
hyper = "*"

[build-dependencies]
savon = { path = ".."}
