[package]
name = "savon-test"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savon = { path = ".."}
reqwest = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["macros"] }
log = "*"
pretty_env_logger = "*"
xmltree = "*"
chrono = "*"

[build-dependencies]
savon = { path = ".."}
