[package]
name = "savon-test"
version = "0.1.0"
authors = ["Geoffroy Couprie <contact@geoffroycouprie.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
savon = { path = ".."}
#reqwest = "0.10"
tokio = { version = "0.2", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
savon = { path = ".."}
